--- a/index.html
+++ b/index.html
@@ -75,6 +75,8 @@
                     <input type="email" name="email" id="email" required>
                     <label for="message">Mensagem:</label>
                     <textarea name="message" id="message" required></textarea>
+                    <input type="hidden" name="_captcha" value="false">
+                    <input type="hidden" name="_next" value="https://30emanuel.github.io/hotel-dev/">
                     <button class="botaoform" type="submit">Enviar</button>
                </form>
             </div>
