--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <header id="home">
         <nav>
-            <p>Hotel Dev</p>
+            <p>Agencia</p>
             <ul>
             <li><a href="#home">Home</a></li>
             <li><a href="#cidade">Cidade</a></li>
