--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="estilo/style.css">
     <link rel="shortcut icon" href="imagens/favicon.ico" type="image/x-icon">
-    <title>Hotel Dev</title>
+    <title>Agencia Dev</title>
 </head>
 <body>
     <header id="home">
@@ -76,7 +76,7 @@
                     <label for="message">Mensagem:</label>
                     <textarea name="message" id="message" required></textarea>
                     <input type="hidden" name="_captcha" value="false">
-                    <input type="hidden" name="_next" value="https://30emanuel.github.io/hotel-dev/">
+                    <input type="hidden" name="_next" value="https://30emanuel.github.io/Site-viagens/">
                     <button class="botaoform" type="submit">Enviar</button>
                </form>
             </div>
